--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+# IDEA and gradle
+.gradle/
+!/gradle/wrapper/gradle-wrapper.jar
+.idea/
+build/
+/out/
+*/out/
+
+# temporary
+/tmp
+
+# java/jvm output
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
