--- a/annotations/build.gradle
+++ b/annotations/build.gradle
@@ -1,21 +1,57 @@
 apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
+
+description="annotions used by the jtsgen annotation processor"
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+
+task sourceJar(type: Jar) {
+  from sourceSets.main.allJava
+  classifier "sources"
+}
+
+def pomConfig = {
+    url 'https://github.com/dzuvic/jtsgen'
+    inceptionYear '2016'
+    scm { url "https://github.com/dzuvic/jtsgen.git" }
+    licenses {
+        license {
+            name "GNU GENERAL PUBLIC LICENSE, Version 3"
+            url 'https://www.gnu.org/licenses/gpl-3.0.txt'
+            distribution 'repo'
+        }
+    }
+    developers {
+        developer {
+            id 'dzuvic'
+            name 'Dragan Zuvic'
+            url 'https://github.com/dzuvic'
+            email 'zuvic@w11k.de'
+            roles { role 'Developer' }
+        }
+    }
+}
+
+
 publishing {
 	publications {
-		JtsgenPublishAnnotation(MavenPublication) {
+		JtsgenMavenPublish(MavenPublication) {
 			from components.java
+			artifact sourceJar
             artifactId 'jtsgen-annotations'
+			pom.withXml {
+			                def root = asNode()
+			                root.appendNode('description', description)
+			                root.appendNode('name', project.name)
+			                root.children().last() + pomConfig
+			            }
 		}
 	}
 }
 
-task blubb() {
-	println(version)
-}
