adding TSModule annotation #2

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ build/
 /out/
 */out/
 
-# temporary
-/tmp
-
 # java/jvm output
 *.class
 *.jar
 hs_err_pid*
 
+# during development
+/processor/src/test/java/jts
+/tmp
