--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -31,15 +31,17 @@ description="The jtsgen annotation processor"
 
 dependencies {
     api project(':annotations')
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "com.google.testing.compile:compile-testing:0.10"
     testCompile "org.mockito:mockito-core:2.7.21"
     testCompile "commons-io:commons-io:2.5"
+    testCompile 'com.google.guava:guava:21.0'
 
-    compile 'com.google.guava:guava:21.0'
 
     compileOnly "com.google.auto.service:auto-service:1.0-rc3"
     compileOnly  files(Jvm.current().toolsJar)
+
     runtime files(Jvm.current().toolsJar)
 }
 
