--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'jacoco'
     
     repositories {
         jcenter()
@@ -26,6 +27,14 @@ subprojects {
     
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+    }
+
+
+    jacocoTestReport {
+        reports {
+            xml.enabled = true
+            html.enabled = true
+        }
     }
 }
 
