--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
    		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1+"
+        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1"
    	}
 }
 
@@ -27,6 +28,7 @@ subprojects {
     
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
     }
 
 
