switching to codecov.io

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ subprojects {
     jacocoTestReport {
         reports {
             xml.enabled = true
-            html.enabled = true
+            html.enabled = false
         }
     }
 }
