--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ jdk:
   - oraclejdk8
 
 after_success:
-  - ./gradlew jacocoTestReport coveralls
+  - ./gradlew jacocoTestReport
+  - bash <(curl -s https://codecov.io/bash)
 
 addons:
   apt:
