--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -34,6 +34,9 @@ configurations {
     apt
 }
 
+def aptOutDir="${projectDir}/src/main/generated"
+def aptOutTestDir="${buildDir}/apt/test/java"
+
 dependencies {
     api project(':annotations')
 
@@ -45,9 +48,12 @@ dependencies {
 
 
     apt "com.google.auto.service:auto-service:1.0-rc3"
+//    apt "com.google.guava:guava:21.0"
+//    apt "com.google.auto:auto-common:0.3"
     implementation ("com.google.auto.service:auto-service:1.0-rc3") {transitive=false}
 
     apt "org.immutables:value:2.5.3" // for annotation processor
+//    apt 'org.immutables:value-processor:2.5.3'
     implementation "org.immutables:value:2.5.3" // for annotations
     implementation "org.immutables:builder:2.5.3" // for annotations
     
@@ -56,8 +62,25 @@ dependencies {
     runtime files(Jvm.current().toolsJar)
 }
 
+
+sourceSets.main.java.srcDirs = [aptOutDir,'src/main/java']
+
+idea {
+    module {
+        generatedSourceDirs += file(aptOutDir)
+    }
+}
+
 compileJava {
     options.annotationProcessorPath = configurations.apt
+    options.compilerArgs << "-s" << aptOutDir
+    doFirst {
+        mkdir(aptOutDir)
+    }
+}
+
+clean {
+    delete aptOutDir
 }
 
 task sourceJar(type: Jar) {
