strict ns mapping #26

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -95,6 +95,7 @@ jacocoTestReport {
                     '/dz/jtsgen/processor/model/TSEnumBuilder*',
                     '/dz/jtsgen/processor/model/TSEnumMemberBuilder*',
                     '/dz/jtsgen/processor/model/TSInterfaceBuilder*',
+                    '/dz/jtsgen/processor/model/NameSpaceMappingBuilder*',
                     '/dz/jtsgen/processor/model/TSRegularMemberBuilder*'
             ] )
         })
