--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 description = 'Java to TypeScript Type Emitter Parent Project'
 
 allprojects {
-    version="0.2.0"
+    version="0.2.1-SNAPSHOT"
     group="jtsgen"
 }
 
