--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ subprojects {
     jacocoTestReport {
         reports {
             xml.enabled = true
-            xml.destination file("${buildDir}/reports/jacoco/report.xml")
+            xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
             html.enabled = false
         }
     }
