[change] disable html report #33

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ subprojects {
         reports {
             xml.enabled = true
             xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
-            html.enabled = true
+            html.enabled = false
         }
     }
 }
