--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,24 @@
 language: java
+
+dist: trusty
+sudo: false
+
+script:
+  - ./gradlew -version
+  - ./gradlew build
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
 jdk:
   - oraclejdk8
 
 after_success:
   - ./gradlew jacocoTestReport
   - bash <(curl -s https://codecov.io/bash)
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
