[change] #40 upgrade gradle 4.7 and change implementation to compileOnly

--- a/annotations/build.gradle
+++ b/annotations/build.gradle
@@ -33,7 +33,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-
+jar{
+    manifest {
+        attributes 'Implementation-Title': 'TSGen Annotations',
+                'Implementation-Version': version
+    }
+}
 
 
 apply from: "${rootDir}/gradle/publish.gradle"
