--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ buildscript {
 description = 'Java to TypeScript Type Emitter Parent Project'
 
 allprojects {
-    version="0.4.0-SNAPSHOT"
+    version="0.4.0"
     group="com.github.dzuvic"
 }
 
